--- a/build.gradle
+++ b/build.gradle
@@ -19,3 +19,9 @@ dependencies {
 test {
     useTestNG()
 }
+
+task reg(type: Test){
+    useTestNG(){
+        suites 'src/test/resources/testng.xml'
+    }
+}
